2010-02-19  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/as.h: as now delegates to a template class 
	Exporter since partial specialization was not possible with 
	the interface of as. It is possible to partially specialize
	Exporter. std::vector<T> when T is a primitive type is 
	now handled through Exporter. Some support Exporter have been
	added and used in RcppArmadillo

	* src/Rcpp/internal/wrap.h: support for std::complex<double>
	and std::complex<float> (needed for RcppArmadillo)

	* src/Rcpp/traits/wrap_type_traits.h : The Importer concept 
	has been introduced to support wrap() of more types. If a 
	class has a typedef "r_import_type" then the following interface
	is assumed and used. The corresponding class must have methods 
	int size() and r_import_type get(int). As usual further dispatch
	is performed based on r_import_type (primitive, etc ...). 
	RcppArmadillo has an example of this for wrapping arma::field<T>
	objects using the FieldImporter<T> class.

2010-02-18  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Language.h: added fixed_call to support STL algorithms
	similar to generate. 
	
	* inst/unitTests/runit.Language.R: unit test for fixed_call

	* src/Rcpp/Environment.h: Environment gains a find method
	which searches for a binding in the associated environment
	but also in all its parents, as opposed to get which just 
	looks in the environment.

2010-02-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Simplified as RcppExample.cpp is shipped off
	* src/Makevars.win: Simplified as RcppExample.cpp is shipped off

2010-02-17  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/SEXP_Vector.h : The lhs use of operator[](string) has
	been improved so that if the name does not exist in the vector,
	the vector grows.

	* inst/unitTests/runit.GenericVector.R: new unit test
	test.List.implicit.push.back about the new operator[](string)

	* src/Rcpp/SimpleVector.h : new template class SimpleMatrix<int>